Wed Aug 27 17:30:41 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/MultiRepoTest/TestConfig.h:
        * tests/DCPS/MultiRepoTest/TestConfig.cpp:

          Undo changes from commit "Wed Aug 27 14:18:17 UTC 2014"
          as this resulted in checking if an unsigned value is less
          than 0, which is always false.

Wed Aug 27 16:57:49 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * performance-tests/DCPS/SimpleLatency/sample_pub.cpp:
        * tests/DCPS/FooTest5/subscriber.cpp:
        * tests/DCPS/Ownership/subscriber.cpp:
        * tests/transport/rtps_reliability/rtps_reliability.cpp:

          Address not checking function return status as reported
          by Coverity.

Wed Aug 27 14:18:17 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/MultiRepoTest/TestConfig.h:
        * tests/DCPS/MultiRepoTest/TestConfig.cpp:

          Make member function input argument types consistent
          internal types.

        * tests/DCPS/MultiRepoTest/TestSystem.cpp:
        * tests/DCPS/WaitForAck/Publisher.cpp:
        * tests/DCPS/WaitForAck/Subscriber.cpp:

          Intialize all members in contructor initializers.

Tue Aug 26 21:46:09 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/transport/tcp/TcpDataLink.cpp:

          Convert dynamic_casts to static_casts for performance
          gain as suggested by Coverity.

        * performance-tests/DCPS/Sync/SyncServer_i.cpp:

          Added exception to throw list that Coverity reported was
          missing.

        * tests/DCPS/DPFactoryQos/Writer.cpp:

          Added null pointer check that Coverity reported was missing.

        * tests/DCPS/FooTest5/publisher.cpp:

          Avoid null dereference check after Coverity reported such a
          dereference was possible.

Tue Aug 26 18:04:38 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DataCollector_T.cpp:

          In DataCollector::insert(std::ostream& str) restore